# ECPoint-operations-contracts

./: README.md  pyproject.toml
src/: ECOperations.sol  EncryptedR1CSVerifier.sol  Groth16Verifier.sol  QAPVerifier.sol  R1CSVerifier.sol  SimpleVerifier.sol  Verifier.sol
test/: Counter.t.sol  ECOperations.t.sol  EncryptedR1CSVerifier.t.sol  Groth16Verifier.t.sol  QAPVerifier.t.sol  R1CSVerifier.t.sol  SimpleVerifier.t.sol  Verifier.t.sol
test-python/: pyproject.toml
test-python/tests/: test_add.py  test_bn128.py  test_matrix_mul.py  test_paring_verify.py  test_r1cs_verifier.py  test_simple_verify.py
tests-python/: test_r1cs_verifier.py  test_simple_verify.py
