[tool.poetry]
name = "ecpoint-operations-contracts"
version = "0.1.0"
description = ""
authors = ["Ratimon <ratixoxo@gmail.com>"]
readme = "README.md"
# packages = [{include = "ecpoint_operations_contracts"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
py-ecc = "^6.0.0"
pytest = "^7.4.2"
numpy = ">=1.21.0"
galois = "0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
