[tool.poetry]
name = "test-python"
version = "0.1.0"
description = ""
authors = ["Ratimon <ratixoxo@gmail.com>"]
readme = "README.md"
packages = [{include = "test_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
